[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hueru"
version = "0.1.0"
description = "My Philips Hue controller"
authors = [
    { name = "derek", email = "derek@example.com" },
]
dependencies = [
    "click",
    "aiohue",
    "requests",
    "PyGObject",
    "numpy",
    "dbus-python",
    # GStreamer and GLib are typically installed via a system package manager,
    # not pip, so they are omitted from this list.
]
readme = "README.md"
requires-python = ">= 3.10"

[tool.setuptools.packages.find]
include = ["hueru"]

[tool.pdm]
distribution = false

[tool.pdm.scripts]
hueru = "python -m hueru.__main__"

[tool.pdm.dev-dependencies]
[project.optional-dependencies]
dev = [
    "pytest",
]
